Avoid defining the same grabber multiple times
For expandable commands, 't' (or 's') type arguments are
implemented by first grabbing the following token (or group)
in the input stream then testing it using an auxiliary.  That
auxiliary does not need to be named after the command; instead
it is now named after its delimiter.

--- a/l3packages/xparse/xparse.dtx
+++ b/l3packages/xparse/xparse.dtx
@@ -874,6 +874,14 @@
 %    \end{macrocode}
 % \end{variable}
 %
+% \begin{variable}{\g_@@_grabber_int}
+%   Used (in exceptional cases) to get unique names for grabbers used by
+%   expandable commands.
+%    \begin{macrocode}
+\int_new:N \g_@@_grabber_int
+%    \end{macrocode}
+% \end{variable}
+%
 % \begin{variable}{\l_@@_fn_tl}
 %   For passing the pre-formed name of the auxiliary to be used as the
 %   parsing function.
@@ -2205,13 +2213,10 @@
   {
     \@@_add_default:
     \@@_add_expandable_grabber:n { t }
-    \bool_if:NTF \l_@@_all_long_bool
-      { \cs_set:cpn }
-      { \cs_set_nopar:cpn }
-      { \l_@@_expandable_aux_name_tl } ##1 #1 {##1}
+    \@@_get_grabber:NN #1 \l_@@_tmpa_tl
     \tl_put_right:Nx \l_@@_signature_tl
       {
-        \exp_not:c { \l_@@_expandable_aux_name_tl }
+        \exp_not:o \l_@@_tmpa_tl
         \exp_not:N #1
       }
     \bool_set_false:N \l_@@_long_bool
@@ -2239,6 +2244,52 @@
     \bool_set_false:N \l_@@_long_bool
   }
 %    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}{\@@_get_grabber:NN}
+% \begin{macro}[aux]{\@@_get_grabber_auxi:NN}
+% \begin{macro}[aux]{\@@_get_grabber_auxii:NN}
+%   Given a token |#1|, defines an expandable function delimited by that
+%   token and stores it in the token list~|#2|.  The function is named
+%   after the token, unless that function name is already taken by some
+%   other grabber (this can happen in the rare case where delimiters
+%   with different category codes are used in the same document): in
+%   that case use a global counter to get a unique name.  Since the
+%   grabbers are not named after \pkg{xparse} commands they should not
+%   be used to get material from the input stream.
+%    \begin{macrocode}
+\cs_new_protected:Npn \@@_get_grabber:NN #1#2
+  {
+    \cs_set:Npn \@@_tmp:w ##1 #1 {##1}
+    \exp_args:Nc \@@_get_grabber_auxi:NN
+      { @@_grabber_ \token_to_str:N #1 :w } #2
+  }
+\cs_new_protected:Npn \@@_get_grabber_auxi:NN #1#2
+  {
+    \cs_if_eq:NNTF \@@_tmp:w #1
+      { \tl_set:Nn #2 {#1} }
+      {
+        \cs_if_exist:NTF #1
+          {
+            \int_gincr:N \g_@@_grabber_int
+            \exp_args:Nc \@@_get_grabber_auxi:NN
+              {
+                @@_grabber_
+                - \int_use:N \g_@@_grabber_int :w
+              }
+              #2
+          }
+          { \@@_get_grabber_auxii:NN #1 #2 }
+      }
+  }
+\cs_new_protected:Npn \@@_get_grabber_auxii:NN #1#2
+  {
+    \cs_set_eq:NN #1 \@@_tmp:w
+    \tl_set:Nn #2 {#1}
+  }
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
 % \end{macro}
 %
 % \subsection{Grabbing arguments}
