--- a/l3kernel/l3oldmodules.dtx
+++ b/l3kernel/l3oldmodules.dtx
@@ -127,7 +127,7 @@
 \typeout{** }
 \typeout{** Package \old@liii@module@name\space is obsolete and has been removed!}
 \typeout{** }
-\typeout{** Its functionality is now only provided as part of in the expl3 package.}
+\typeout{** Its functionality is now only provided as part of the expl3 package.}
 \typeout{** }
 %<!l3sort>\typeout{** After showing you an error message you can hit <return> we will continue}
 %<!l3sort>\typeout{** for now by loading expl3 for you. However, the old packages will be}
