--- a/l3kernel/l3str.dtx
+++ b/l3kernel/l3str.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3str.dtx Copyright (C) 2011-2016 The LaTeX3 Project
+%% File: l3str.dtx Copyright (C) 2011-2017 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -612,6 +612,15 @@
 %   time quadratic in the character count of the string.
 % \end{function}
 %
+% \begin{function}[rEXP]{\__str_to_other_fast:n}
+%   \begin{syntax}
+%     \cs{__str_to_other_fast:n} \Arg{token list}
+%   \end{syntax}
+%   Same behaviour \cs{__str_to_other:n} but only restricted-expandable.
+%   It takes a time linear in the character count of the string.
+%   It is used for \cs{iow_wrap:nnnN}.
+% \end{function}
+%
 % \begin{function}[EXP]{\__str_count:n}
 %   \begin{syntax}
 %     \cs{__str_count:n} \Arg{other string}
@@ -971,6 +980,38 @@
       }
     \cs_new:Npn \@@_to_other_end:w \fi: #1 \q_mark #2 * A #3 \q_stop
       { \fi: #2 }
+  }
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
+%
+% \begin{macro}[rEXP, int]{\@@_to_other_fast:n}
+% \begin{macro}[rEXP, aux]{\@@_to_other_fast_loop:w, \@@_to_other_fast_end:w}
+%   The difference with \cs{@@_to_other:n} is that the converted part is
+%   left in the input stream, making these commands only
+%   restricted-expandable.
+%    \begin{macrocode}
+\cs_new:Npn \@@_to_other_fast:n #1
+  {
+    \exp_after:wN \@@_to_other_fast_loop:w \tl_to_str:n {#1} ~
+      A ~ A ~ A ~ A ~ A ~ A ~ A ~ A ~ A ~ \q_stop
+  }
+\group_begin:
+\tex_lccode:D `\* = `\  %
+\tex_lccode:D `\A = `\A 
+\tex_lowercase:D
+  {
+    \group_end:
+    \cs_new:Npn \@@_to_other_fast_loop:w
+      #1 ~ #2 ~ #3 ~ #4 ~ #5 ~ #6 ~ #7 ~ #8 ~ #9 ~
+      {
+        \if_meaning:w A #9
+          \@@_to_other_fast_end:w
+        \fi:
+        #1 * #2 * #3 * #4 * #5 * #6 * #7 * #8 * #9
+        \@@_to_other_fast_loop:w *
+      }
+    \cs_new:Npn \@@_to_other_fast_end:w #1 * A #2 \q_stop {#1}
   }
 %    \end{macrocode}
 % \end{macro}
