Fix expansion in \tl_show_analysis:n
This only showed up for registers with very long names.

--- a/l3experimental/l3str/l3tl-analysis.dtx
+++ b/l3experimental/l3str/l3tl-analysis.dtx
@@ -1028,7 +1028,7 @@
         \token_if_toks_register:NTF #1 \__prg_break: { }
         \use_none:nnn
         \__prg_break_point:
-        \use:n { = \tex_the:D #1 }
+        \use:n { \exp_after:wN = \tex_the:D #1 }
       }
   }
 %    \end{macrocode}
